# believe

./: .gitignore  LICENSE  README.md  flask_example.py  format.sh  publish.sh  pyproject.toml  setup.py
.github/workflows/: python-package.yml  python-publish.yml
believe/: __init__.py  dict_matcher.py  error.py  internal.py  list_matcher.py  number_matcher.py  other_matcher.py  str_matcher.py
example/: flask_example.py  unittest_example.py
src/: setup.py
src/believe/: __init__.py  dict_matcher.py  internal.py  list_matcher.py  mixin.py  number_matcher.py  other_matcher.py  str_matcher.py
tests/: test_believe.py
